kubernetes/taxi-cell-profit-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profit-dashboard
  namespace: default
spec:
  selector:
    deploy: profit-dashboard
  ports:
  - port: 80
    targetPort: 80
