kubernetes/taxi-cell-profit-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: profit-dashboard-ingress
  namespace: default
spec:
  rules:
  - host: maw-map.cloud.elite-se.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: profit-dashboard
          servicePort: 80
